kubernetes/frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: saikanth9010/payment-service-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # env:
        # - name: FRONTEND_URL
        #   value:
