kubernetes/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: payment-service
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          # volumeMounts:
          #   - name: mongo-data
          #     mountPath: /data/db
        - name: backend
          image: saikanth9010/payment-service-backend:latest
          ports:
            - containerPort: 5000
        - name: frontend
          image: saikanth9010/payment-service-frontend:latest
          ports:
            - containerPort: 3000
