kubernetes/service.yml
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: payment-service
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: payment-service
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: payment-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
